syntax = "proto3";

option go_package = "scannerV1";

option java_package = "io.stackrox.proto.api.scanner.v1";

import weak "google/api/annotations.proto";
import "scanner/api/v1/vulnerability.proto";

package scannerV1;

message GetNodeVulnerabilitiesRequest {
    string             os_image           = 1;
    string             kernel_version     = 2;
    string             kubelet_version    = 3;
    string             kubeproxy_version  = 4;
    message ContainerRuntime {
        string name    = 1;
        string version = 2;
    }
    ContainerRuntime runtime              = 5;
}

message GetNodeVulnerabilitiesResponse {
    string   operating_system                        = 6;
    repeated Vulnerability kernel_vulnerabilities    = 1;
    repeated Vulnerability kubelet_vulnerabilities   = 2;
    repeated Vulnerability kubeproxy_vulnerabilities = 3;
    repeated Vulnerability runtime_vulnerabilities   = 4;

    message KernelComponent {
        string name    = 1;
        string version = 2;
    }
    KernelComponent       kernel_component           = 5;
}

// NodeScanService APIs can be used to get vulnerabilities for nodes.
service NodeScanService {
    rpc GetNodeVulnerabilities(GetNodeVulnerabilitiesRequest) returns (GetNodeVulnerabilitiesResponse) {
        option (google.api.http) = {
            get: "/v1/nodes/vulnerabilities"
        };
    }
}
